compiler/tools/fpp-check/test/constant/undef_1.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/constant/undef_1.fpp:1.14
constant b = a
             ^
error: symbol a is not defined
note: looking for a constant here
